detail pages updated

--- a/src/app/layout/navigation/navigation.html
+++ b/src/app/layout/navigation/navigation.html
@@ -33,8 +33,8 @@
                 (click)="closeNavbar(); closeProducts()">Stainless Steel</a>
             </li>
             <li>
-              <a class="dropdown-item" routerLink="/products/aluminium"
-                (click)="closeNavbar(); closeProducts()">Aluminium</a>
+              <a class="dropdown-item" routerLink="/products/aluminum"
+                (click)="closeNavbar(); closeProducts()">Aluminum</a>
             </li>
             <li>
               <a class="dropdown-item" routerLink="/products/copper" (click)="closeNavbar(); closeProducts()">Copper</a>
