--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -56,8 +56,8 @@
     <div class="row align-items-center">
       <div class="col-lg-6 mb-4 mb-lg-0">
         <img
-          src="/h-aboutus.png"
-          alt="About Pooja Steel and Impex"
+          src="/home/h-aboutus.png"
+          alt="About Umiya Steel and Impex"
           class="img-fluid rounded"
           width="500"
           height="400"
@@ -67,7 +67,7 @@
         <h2 class="mb-3">About Us</h2>
         <p class="lead text-muted mb-3">A reliable supplier of all kind of metals</p>
         <p>
-          Welcome to Pooja Steel and Impex, your trusted partner in the metals industry for over a
+          Welcome to Umiya Steel and Impex, your trusted partner in the metals industry for over a
           decade. With more than 10 years of experience, we have established ourselves as a reliable
           supplier of all kinds of metals, catering to diverse industries and applications.
         </p>
@@ -120,7 +120,7 @@
     <p class="text-center text-muted mb-5">A reliable supplier of all kind of metals</p>
 
     <p class="text-center mb-5">
-      At Pooja Steel and Impex, we stand out as your premier choice for metal supplies due to our
+      At Umiya Steel and Impex, we stand out as your premier choice for metal supplies due to our
       unwavering commitment to quality, reliability, and customer satisfaction. With over a decade of
       experience in the industry, we have built a reputation for delivering superior products and
       exceptional service.
@@ -165,8 +165,8 @@
               <i class="bi bi-envelope-fill me-2"></i>Email
             </h6>
             <p>
-              <a href="mailto:info@poojasteelandimpex.com" class="text-decoration-none">
-                info@poojasteelandimpex.com
+              <a href="mailto:info@umiyasteelandimpex.com" class="text-decoration-none">
+                info@umiyasteelandimpex.com
               </a>
             </p>
           </div>
@@ -192,7 +192,7 @@
       <div class="col-lg-6">
         <div class="map-container">
           <iframe
-            title="Pooja Steel and Impex Location"
+            title="Umiya Steel and Impex Location"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3669.7522404411397!2d72.55218!3d23.081819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e82fe8e8e8e8d%3A0x8e8e8e8e8e8e8e8e!2sPooja%20Steel%20And%20Impex!5e0!3m2!1sen!2sin!4v1234567890"
             width="100%"
             height="400"
