--- a/src/app/pages/products/products.scss
+++ b/src/app/pages/products/products.scss
@@ -56,7 +56,7 @@
       background: linear-gradient(135deg, #b87333 0%, #93622a 100%);
     }
 
-    &.color-aluminium {
+    &.color-aluminum {
       background: linear-gradient(135deg, #b0bfff 0%, #7b9aff 100%);
     }
 
