phone number address updated

--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -41,7 +41,7 @@
               <div class="info-item-content">
                 <h3>Phone</h3>
                 <p>
-                  <a href="tel:+918980808824">+91 8980808824</a>
+                  <a href="tel:+911234567890">+91 1234567890</a>
                 </p>
               </div>
             </div>
@@ -67,11 +67,10 @@
               <div class="info-item-content">
                 <h3>Address</h3>
                 <address>
-                  FF, 4, Jaymangal IND Estate,<br />
-                  Opp Jagnnath IND Estate,<br />
-                  Nr Shriram Estate,<br />
-                  Gujarat Bottling Road, Rakhial,<br />
-                  Ahmedabad, Gujarat 380023
+                  1600 Pennsylvania Avenue NW,<br />
+                  Washington,<br />
+                  DC 20500,<br />
+                  United States
                 </address>
               </div>
             </div>
