code formatting done

--- a/src/app/layout/navigation/navigation.html
+++ b/src/app/layout/navigation/navigation.html
@@ -30,13 +30,16 @@
                 (click)="closeNavbar(); closeProducts()">Aluminum</a>
             </li>
             <li>
-              <a routerLink="/products/copper" routerLinkActive="active" (click)="closeNavbar(); closeProducts()">Copper</a>
+              <a routerLink="/products/copper" routerLinkActive="active"
+                (click)="closeNavbar(); closeProducts()">Copper</a>
             </li>
             <li>
-              <a routerLink="/products/brass" routerLinkActive="active" (click)="closeNavbar(); closeProducts()">Brass</a>
+              <a routerLink="/products/brass" routerLinkActive="active"
+                (click)="closeNavbar(); closeProducts()">Brass</a>
             </li>
             <li>
-              <a routerLink="/products/mild-steel" routerLinkActive="active" (click)="closeNavbar(); closeProducts()">Mild Steel</a>
+              <a routerLink="/products/mild-steel" routerLinkActive="active"
+                (click)="closeNavbar(); closeProducts()">Mild Steel</a>
             </li>
             <li>
               <a routerLink="/products/galvanize" routerLinkActive="active"
