--- a/src/app/pages/about-us/about-us.html
+++ b/src/app/pages/about-us/about-us.html
@@ -126,7 +126,8 @@
         <!-- Image -->
         <div class="col-lg-6 order-lg-1">
           <div class="side-img-wrapper">
-            <img ngSrc="/aboutus/aboutus-whychooseus.png" alt="Why choose Umiya Steel and Impex" fill class="side-img" />
+            <img ngSrc="/aboutus/aboutus-whychooseus.png" alt="Why choose Umiya Steel and Impex" fill
+              class="side-img" />
           </div>
         </div>
         <!-- Text -->
